Backed out 2 changesets (bug 1395460) for eslint failure at browser/components/uitour/UITour.jsm:556 (no return value from arrow function). r=backout on a CLOSED TREE
Backed out changeset 0bc6d186d609 (bug 1395460)
Backed out changeset 6c028123001d (bug 1395460)

UltraBlame original commit: 4235b95666453a7d53afa8cc88c3d27765f82933

--- a/browser/extensions/onboarding/locales/en-US/onboarding.properties
+++ b/browser/extensions/onboarding/locales/en-US/onboarding.properties
@@ -1705,6 +1705,28 @@ form
 .
 description
 .
+#
+Your
+translation
+should
+be
+consistent
+with
+the
+form
+displayed
+in
+#
+about
+:
+accounts
+when
+signing
+up
+to
+Firefox
+Account
+.
 onboarding
 .
 tour
@@ -1778,6 +1800,28 @@ Firefox
 Sync
 "
 instead
+.
+#
+Your
+translation
+should
+be
+consistent
+with
+the
+form
+displayed
+in
+#
+about
+:
+accounts
+when
+signing
+up
+to
+Firefox
+Account
 .
 onboarding
 .
