--- a/devtools/client/locales/en-US/inspector.properties
+++ b/devtools/client/locales/en-US/inspector.properties
@@ -3138,6 +3138,51 @@ inspector
 .
 sidebar
 .
+changesViewTitle
+)
+:
+#
+This
+is
+the
+title
+shown
+in
+a
+tab
+in
+the
+side
+panel
+of
+the
+Inspector
+panel
+#
+that
+corresponds
+to
+the
+tool
+displaying
+CSS
+changes
+.
+inspector
+.
+sidebar
+.
+changesViewTitle
+=
+Changes
+#
+LOCALIZATION
+NOTE
+(
+inspector
+.
+sidebar
+.
 animationInspectorTitle
 )
 :
