Bug 1365425 - [bn-BD] Add search engine setup for Firefox Mobile for Bengali (Bengladesh), r=flod
MozReview-Commit-ID: FELtFVywmsW

UltraBlame original commit: 76a50645f3612ef49065d7b796094c8a427a90c5

--- a/mobile/locales/search/list.json
+++ b/mobile/locales/search/list.json
@@ -490,6 +490,43 @@ bg
 "
 bn
 -
+BD
+"
+:
+{
+"
+default
+"
+:
+{
+"
+visibleDefaultEngines
+"
+:
+[
+"
+google
+"
+"
+yahoo
+"
+"
+bing
+"
+"
+ddg
+"
+"
+wikipedia
+-
+bn
+"
+]
+}
+}
+"
+bn
+-
 IN
 "
 :
