Bug 1411112 - Search engine setup for Firefox Mobile for Latgalian, r=flod
MozReview-Commit-ID: JSbbcWe7ctx

UltraBlame original commit: 544c6d77d9bfecd1c0702ee79fb06f607f9ead4d

--- a/mobile/locales/search/list.json
+++ b/mobile/locales/search/list.json
@@ -2574,6 +2574,48 @@ lt
 }
 }
 "
+ltg
+"
+:
+{
+"
+default
+"
+:
+{
+"
+visibleDefaultEngines
+"
+:
+[
+"
+google
+"
+"
+yahoo
+"
+"
+bing
+"
+"
+amazon
+-
+co
+-
+uk
+"
+"
+twitter
+"
+"
+wikipedia
+-
+ltg
+"
+]
+}
+}
+"
 lv
 "
 :
