Bug 1404801 - Part 5: Show error message in case of no animations. r=gl
MozReview-Commit-ID: 538oUjKMsnT

UltraBlame original commit: 79a0e0e9ebcd5790b18c89bf36fd86b52ee32bc0

--- a/devtools/client/locales/en-US/animationinspector.properties
+++ b/devtools/client/locales/en-US/animationinspector.properties
@@ -263,6 +263,77 @@ NOTE
 (
 panel
 .
+invalidElementSelected
+)
+:
+#
+This
+is
+the
+label
+shown
+in
+the
+panel
+when
+there
+are
+no
+displayable
+animations
+.
+#
+(
+e
+.
+g
+.
+In
+case
+of
+user
+selected
+a
+non
+-
+element
+node
+or
+a
+node
+that
+is
+not
+animated
+)
+.
+panel
+.
+noAnimation
+=
+No
+animations
+were
+found
+for
+the
+current
+element
+.
+\
+nPick
+another
+element
+from
+the
+page
+.
+#
+LOCALIZATION
+NOTE
+(
+panel
+.
 allAnimations
 )
 :
