Bug 1412230 - Replace the word "Company" with "Organization". r=flod,lchang
MozReview-Commit-ID: 6e8dm5QMbxk

UltraBlame original commit: e10c2f71fdccf1924911925c5b708df7338c0685

--- a/browser/extensions/formautofill/locales/en-US/formautofill.properties
+++ b/browser/extensions/formautofill/locales/en-US/formautofill.properties
@@ -549,7 +549,7 @@ category
 name
 category
 .
-organization
+organization2
 category
 .
 tel
@@ -589,9 +589,9 @@ name
 name
 category
 .
-organization
+organization2
 =
-company
+organization
 category
 .
 tel
@@ -678,7 +678,7 @@ g
 .
 Also
 autofills
-company
+organization
 phone
 email
 .
@@ -995,9 +995,9 @@ familyName
 =
 Last
 Name
-organization
+organization2
 =
-Company
+Organization
 streetAddress
 =
 Street
