--- a/dom/locales/en-US/chrome/security/csp.properties
+++ b/dom/locales/en-US/chrome/security/csp.properties
@@ -1363,7 +1363,7 @@ ignored
 LOCALIZATION
 NOTE
 (
-deprecatedDirective
+deprecatedChildSrcDirective
 )
 :
 #
@@ -1372,22 +1372,24 @@ deprecatedDirective
 S
 is
 the
-name
+value
 of
 the
 deprecated
 directive
-%
-2
-S
-is
-the
-name
-of
-the
-replacement
 .
-deprecatedDirective
+#
+Do
+not
+localize
+:
+worker
+-
+src
+frame
+-
+src
+deprecatedChildSrcDirective
 =
 Directive
 %
@@ -1400,10 +1402,21 @@ deprecated
 Please
 use
 directive
-%
-2
-S
-instead
+worker
+-
+src
+to
+control
+workers
+or
+directive
+frame
+-
+src
+to
+control
+frames
+respectively
 .
 #
 LOCALIZATION
