--- a/dom/locales/en-US/chrome/security/csp.properties
+++ b/dom/locales/en-US/chrome/security/csp.properties
@@ -1363,7 +1363,7 @@ ignored
 LOCALIZATION
 NOTE
 (
-deprecatedChildSrcDirective
+deprecatedDirective
 )
 :
 #
@@ -1372,24 +1372,22 @@ deprecatedChildSrcDirective
 S
 is
 the
-value
+name
 of
 the
 deprecated
 directive
+%
+2
+S
+is
+the
+name
+of
+the
+replacement
 .
-#
-Do
-not
-localize
-:
-worker
--
-src
-frame
--
-src
-deprecatedChildSrcDirective
+deprecatedDirective
 =
 Directive
 %
@@ -1402,21 +1400,10 @@ deprecated
 Please
 use
 directive
-worker
--
-src
-to
-control
-workers
-or
-directive
-frame
--
-src
-to
-control
-frames
-respectively
+%
+2
+S
+instead
 .
 #
 LOCALIZATION
