Bug 1412215 - Switch Latgalian wikipedia searchplugin to ltg.wikipedia.org, r=delphine
Also fixing a typo in Latvian description

MozReview-Commit-ID: COUtD3ycvm8

UltraBlame original commit: 60a1bc07227b16c702a4176e24e6f2f94f7334ce

--- a/browser/locales/searchplugins/wikipedia-ltg.xml
+++ b/browser/locales/searchplugins/wikipedia-ltg.xml
@@ -85,8 +85,10 @@ search
 <
 ShortName
 >
-Vikip
-dija
+Vikipedeja
+(
+ltg
+)
 <
 /
 ShortName
@@ -96,10 +98,9 @@ Description
 >
 Vikip
 dija
-br
-v
-enciklop
-dija
+breivuo
+e
+ciklopedeja
 <
 /
 Description
@@ -169,7 +170,7 @@ https
 :
 /
 /
-lv
+ltg
 .
 wikipedia
 .
@@ -237,7 +238,7 @@ https
 :
 /
 /
-lv
+ltg
 .
 wikipedia
 .
@@ -245,7 +246,8 @@ org
 /
 wiki
 /
-Special
+Sevi
+kuo
 :
 Search
 "
