--- a/browser/locales/en-US/chrome/browser/browser.properties
+++ b/browser/locales/en-US/chrome/browser/browser.properties
@@ -3713,6 +3713,101 @@ accesskey
 =
 C
 #
+Flash
+activation
+doorhanger
+UI
+flashActivate
+.
+message
+=
+Do
+you
+want
+to
+allow
+Adobe
+Flash
+to
+run
+on
+this
+site
+?
+Only
+allow
+Flash
+on
+sites
+you
+trust
+.
+flashActivate
+.
+outdated
+.
+message
+=
+Do
+you
+want
+to
+allow
+an
+outdated
+version
+of
+Flash
+to
+run
+on
+this
+site
+?
+An
+outdated
+version
+can
+affect
+browser
+performance
+and
+security
+.
+flashActivate
+.
+remember
+=
+Remember
+this
+decision
+flashActivate
+.
+noAllow
+=
+Don
+t
+Allow
+flashActivate
+.
+allow
+=
+Allow
+flashActivate
+.
+noAllow
+.
+accesskey
+=
+D
+flashActivate
+.
+allow
+.
+accesskey
+=
+A
+#
 in
 -
 page
