Bug 1411727 - Update Debugger frontend (10-25). r=jdescottes
MozReview-Commit-ID: BffE9lchnEj

UltraBlame original commit: 129dfaaf265a5eb9b18681fded2c3910167ddcff

--- a/devtools/client/locales/en-US/debugger.properties
+++ b/devtools/client/locales/en-US/debugger.properties
@@ -2982,8 +2982,6 @@ menu
 item
 for
 adding
-/
-editing
 a
 breakpoint
 condition
@@ -2996,8 +2994,6 @@ editor
 addConditionalBreakpoint
 =
 Add
-/
-Edit
 conditional
 breakpoint
 editor
@@ -3249,7 +3245,12 @@ watch
 expression
 expressions
 .
-placeholder
+label
+=
+Add
+watch
+expression
+expressions
 .
 accesskey
 =
