Bug 1403108 - [cs] Unify mobile search engines list with browser, r=delphine,flod
MozReview-Commit-ID: 27CapGDp6pY

UltraBlame original commit: 45ce5a8174d0f6c62247aefa898cf81b2c5ecf6d

--- a/mobile/locales/search/list.json
+++ b/mobile/locales/search/list.json
@@ -726,6 +726,9 @@ visibleDefaultEngines
 google
 "
 "
+bing
+"
+"
 duckduckgo
 "
 "
@@ -742,9 +745,6 @@ cz
 seznam
 -
 cz
-"
-"
-twitter
 "
 "
 wikipedia
