--- a/mobile/locales/l10n-changesets.json
+++ b/mobile/locales/l10n-changesets.json
@@ -259,6 +259,11 @@ api
 -
 16
 "
+"
+android
+-
+multilocale
+"
 ]
 "
 revision
@@ -2117,6 +2122,11 @@ android
 api
 -
 16
+"
+"
+android
+-
+multilocale
 "
 ]
 "
