no bug - Bumping Firefox l10n changesets DONTBUILD r=release a=l10n-bump
oc -> default

UltraBlame original commit: 41cbd2998e63fcaf12b1aea6411c6b7da5ee3ef6

--- a/browser/locales/l10n-changesets.json
+++ b/browser/locales/l10n-changesets.json
@@ -2503,6 +2503,40 @@ default
 "
 }
 "
+oc
+"
+:
+{
+"
+platforms
+"
+:
+[
+"
+linux
+"
+"
+linux64
+"
+"
+macosx64
+"
+"
+win32
+"
+"
+win64
+"
+]
+"
+revision
+"
+:
+"
+default
+"
+}
+"
 or
 "
 :
