Backed out changeset b558ad2372bf (bug 1410666) for failing the browser-chrome on browser_all_files_referenced.js and browser_switch_to_customize_mode.js r=backout on a CLOSED TREE
Backed out changeset b558ad2372bf (bug 1410666)

UltraBlame original commit: f348675cfbf78fc8ad5a797d3cd230bff1dd4392

--- a/browser/locales/en-US/chrome/browser/browser.dtd
+++ b/browser/locales/en-US/chrome/browser/browser.dtd
@@ -3700,6 +3700,52 @@ H
 <
 !
 ENTITY
+appMenuCustomize
+.
+label
+"
+Customize
+"
+>
+<
+!
+ENTITY
+appMenuCustomize
+.
+tooltip
+"
+Customize
+the
+Menu
+and
+Toolbars
+"
+>
+<
+!
+ENTITY
+appMenuCustomizeExit
+.
+label
+"
+Exit
+Customize
+"
+>
+<
+!
+ENTITY
+appMenuCustomizeExit
+.
+tooltip
+"
+Finish
+Customizing
+"
+>
+<
+!
+ENTITY
 appMenuHistory
 .
 showAll
@@ -3774,6 +3820,18 @@ appMenuHelp
 label
 "
 Help
+"
+>
+<
+!
+ENTITY
+appMenuHelp
+.
+tooltip
+"
+Open
+Help
+Menu
 "
 >
 <
@@ -9317,6 +9375,39 @@ or
 overflow
 menu
 .
+"
+>
+<
+!
+ENTITY
+customizeMode
+.
+menuAndToolbars
+.
+empty
+"
+Want
+more
+tools
+?
+"
+>
+<
+!
+ENTITY
+customizeMode
+.
+menuAndToolbars
+.
+emptyLink
+"
+Choose
+from
+thousands
+of
+add
+-
+ons
 "
 >
 <
