Bug 1401594 - land NSS NSS_3_34_BETA1 UPGRADE_NSS_RELEASE, r=me
MozReview-Commit-ID: 8ckNdJ29KWZ

UltraBlame original commit: 100e006a2730f8a65aaebd14e30de3a055d9b46a

--- a/security/nss/doc/nroff/certutil.1
+++ b/security/nss/doc/nroff/certutil.1
@@ -29,11 +29,7 @@ Generator
 DocBook
 XSL
 Stylesheets
-v1
-.
-78
-.
-1
+vsnapshot
 <
 http
 :
@@ -51,9 +47,9 @@ net
 "
 Date
 :
-8
-September
-2016
+27
+October
+2017
 .
 \
 "
@@ -88,9 +84,9 @@ CERTUTIL
 1
 "
 "
-8
-September
-2016
+27
+October
+2017
 "
 "
 nss
@@ -3609,6 +3605,8 @@ nistp256
 nistp384
 nistp521
 curve25519
+\
+&
 .
 .
 sp
@@ -5221,6 +5219,177 @@ are
 3
 and
 17
+\
+&
+.
+.
+RE
+.
+PP
+\
+-
+\
+-
+pss
+.
+RS
+4
+Restrict
+the
+generated
+certificate
+(
+with
+the
+\
+fB
+\
+-
+S
+\
+fR
+option
+)
+or
+certificate
+request
+(
+with
+the
+\
+fB
+\
+-
+R
+\
+fR
+option
+)
+to
+be
+used
+with
+the
+RSA
+\
+-
+PSS
+signature
+scheme
+\
+&
+.
+This
+only
+works
+when
+the
+private
+key
+of
+the
+certificate
+or
+certificate
+request
+is
+RSA
+\
+&
+.
+.
+RE
+.
+PP
+\
+-
+\
+-
+pss
+\
+-
+sign
+.
+RS
+4
+Sign
+the
+generated
+certificate
+with
+the
+RSA
+\
+-
+PSS
+signature
+scheme
+(
+with
+the
+\
+fB
+\
+-
+C
+\
+fR
+or
+\
+fB
+\
+-
+S
+\
+fR
+option
+)
+\
+&
+.
+This
+only
+works
+when
+the
+private
+key
+of
+the
+signer
+\
+*
+(
+Aqs
+certificate
+is
+RSA
+\
+&
+.
+If
+the
+signer
+\
+*
+(
+Aqs
+certificate
+is
+restricted
+to
+RSA
+\
+-
+PSS
+it
+is
+not
+necessary
+to
+specify
+this
+option
 \
 &
 .
