--- a/security/nss/doc/nroff/pk12util.1
+++ b/security/nss/doc/nroff/pk12util.1
@@ -29,11 +29,7 @@ Generator
 DocBook
 XSL
 Stylesheets
-v1
-.
-78
-.
-1
+vsnapshot
 <
 http
 :
@@ -51,9 +47,9 @@ net
 "
 Date
 :
-5
-June
-2014
+27
+October
+2017
 .
 \
 "
@@ -88,9 +84,9 @@ PK12UTIL
 1
 "
 "
-5
-June
-2014
+27
+October
+2017
 "
 "
 nss
@@ -1120,12 +1116,7 @@ RS
 4
 Specify
 the
-key
-cert
-(
-overall
-package
-)
+certiticate
 encryption
 algorithm
 \
@@ -4347,8 +4338,8 @@ file
 and
 optionally
 the
-entire
-package
+associated
+certificates
 \
 &
 .
@@ -4362,21 +4353,20 @@ tool
 defaults
 to
 using
-\
-fBPKCS12
-V2
-PBE
-with
-SHA1
-and
-3KEY
-Triple
-DES
+PKCS
+#
+12
+SHA
 \
 -
-cbc
+1
+and
+3
 \
-fR
+-
+key
+triple
+DES
 for
 private
 key
@@ -4384,31 +4374,29 @@ encryption
 \
 &
 .
-\
-fBPKCS12
-V2
-PBE
-with
-SHA1
-and
-40
-Bit
-RC4
-\
-fR
-is
-the
-default
-for
-the
-overall
-package
-encryption
-when
+When
 not
 in
 FIPS
 mode
+PKCS
+#
+12
+SHA
+\
+-
+1
+and
+40
+\
+-
+bit
+RC4
+is
+used
+for
+certificate
+encryption
 \
 &
 .
@@ -4419,8 +4407,38 @@ mode
 there
 is
 no
-package
+certificate
 encryption
+\
+&
+.
+If
+certificate
+encryption
+is
+not
+wanted
+specify
+\
+fB
+"
+NONE
+"
+\
+fR
+as
+the
+argument
+of
+the
+\
+fB
+\
+-
+C
+\
+fR
+option
 \
 &
 .
@@ -4453,252 +4471,230 @@ supported
 .
 .
 PP
-Symmetric
-CBC
-ciphers
-for
 PKCS
 #
 5
-V2
-.
-RS
-4
-.
-sp
-.
-RS
-4
-.
-ie
-n
-\
-{
-\
-\
-h
-'
--
-04
-'
-\
-(
-bu
-\
-h
-'
-+
-03
-'
-\
-c
-.
-\
-}
-.
-el
-\
-{
-\
-.
-sp
--
-1
-.
-IP
-\
-(
-bu
-2
-.
-3
-.
-\
-}
-DES
+password
 \
 -
-CBC
-.
-RE
-.
-sp
-.
-RS
-4
-.
-ie
-n
-\
-{
-\
-\
-h
-'
--
-04
-'
-\
-(
-bu
-\
-h
-'
-+
-03
-'
-\
-c
-.
-\
-}
-.
-el
-\
-{
-\
-.
-sp
--
-1
-.
-IP
-\
-(
-bu
-2
-.
-3
-.
-\
-}
-RC2
-\
--
-CBC
-.
-RE
-.
-sp
-.
-RS
-4
-.
-ie
-n
-\
-{
-\
-\
-h
-'
--
-04
-'
-\
-(
-bu
-\
-h
-'
-+
-03
-'
-\
-c
-.
-\
-}
-.
-el
-\
-{
-\
-.
-sp
--
-1
-.
-IP
-\
-(
-bu
-2
-.
-3
-.
-\
-}
-RC5
-\
--
-CBCPad
-.
-RE
-.
-sp
-.
-RS
-4
-.
-ie
-n
-\
-{
-\
-\
-h
-'
--
-04
-'
-\
-(
-bu
-\
-h
-'
-+
-03
-'
-\
-c
-.
-\
-}
-.
-el
-\
-{
-\
-.
-sp
--
-1
-.
-IP
-\
-(
-bu
-2
-.
-3
-.
-\
-}
-DES
-\
--
-EDE3
-\
--
-CBC
-(
-the
-default
-for
-key
+based
 encryption
+.
+RS
+4
+.
+sp
+.
+RS
+4
+.
+ie
+n
+\
+{
+\
+\
+h
+'
+-
+04
+'
+\
+(
+bu
+\
+h
+'
++
+03
+'
+\
+c
+.
+\
+}
+.
+el
+\
+{
+\
+.
+sp
+-
+1
+.
+IP
+\
+(
+bu
+2
+.
+3
+.
+\
+}
+PBES2
+with
+AES
+\
+-
+CBC
+\
+-
+Pad
+as
+underlying
+encryption
+scheme
+(
+\
+fB
+"
+AES
+\
+-
+128
+\
+-
+CBC
+"
+\
+fR
+\
+fB
+"
+AES
+\
+-
+192
+\
+-
+CBC
+"
+\
+fR
+and
+\
+fB
+"
+AES
+\
+-
+256
+\
+-
+CBC
+"
+\
+fR
+)
+.
+RE
+.
+RE
+.
+PP
+PKCS
+#
+12
+password
+\
+-
+based
+encryption
+.
+RS
+4
+.
+sp
+.
+RS
+4
+.
+ie
+n
+\
+{
+\
+\
+h
+'
+-
+04
+'
+\
+(
+bu
+\
+h
+'
++
+03
+'
+\
+c
+.
+\
+}
+.
+el
+\
+{
+\
+.
+sp
+-
+1
+.
+IP
+\
+(
+bu
+2
+.
+3
+.
+\
+}
+SHA
+\
+-
+1
+and
+128
+\
+-
+bit
+RC4
+(
+\
+fB
+"
+PKCS
+#
+12
+V2
+PBE
+With
+SHA
+\
+-
+1
+And
+128
+Bit
+RC4
+"
+\
+fR
+or
+\
+fB
+"
+RC4
+"
+\
+fR
 )
 .
 RE
@@ -4753,770 +4749,46 @@ bu
 .
 \
 }
-AES
+SHA
 \
--
-128
-\
--
-CBC
-.
-RE
-.
-sp
-.
-RS
-4
-.
-ie
-n
-\
-{
-\
-\
-h
-'
--
-04
-'
-\
-(
-bu
-\
-h
-'
-+
-03
-'
-\
-c
-.
-\
-}
-.
-el
-\
-{
-\
-.
-sp
 -
 1
-.
-IP
-\
-(
-bu
-2
-.
-3
-.
-\
-}
-AES
-\
--
-192
-\
--
-CBC
-.
-RE
-.
-sp
-.
-RS
-4
-.
-ie
-n
-\
-{
-\
-\
-h
-'
--
-04
-'
-\
-(
-bu
-\
-h
-'
-+
-03
-'
-\
-c
-.
-\
-}
-.
-el
-\
-{
-\
-.
-sp
--
-1
-.
-IP
-\
-(
-bu
-2
-.
-3
-.
-\
-}
-AES
-\
--
-256
-\
--
-CBC
-.
-RE
-.
-sp
-.
-RS
-4
-.
-ie
-n
-\
-{
-\
-\
-h
-'
--
-04
-'
-\
-(
-bu
-\
-h
-'
-+
-03
-'
-\
-c
-.
-\
-}
-.
-el
-\
-{
-\
-.
-sp
--
-1
-.
-IP
-\
-(
-bu
-2
-.
-3
-.
-\
-}
-CAMELLIA
-\
--
-128
-\
--
-CBC
-.
-RE
-.
-sp
-.
-RS
-4
-.
-ie
-n
-\
-{
-\
-\
-h
-'
--
-04
-'
-\
-(
-bu
-\
-h
-'
-+
-03
-'
-\
-c
-.
-\
-}
-.
-el
-\
-{
-\
-.
-sp
--
-1
-.
-IP
-\
-(
-bu
-2
-.
-3
-.
-\
-}
-CAMELLIA
-\
--
-192
-\
--
-CBC
-.
-RE
-.
-sp
-.
-RS
-4
-.
-ie
-n
-\
-{
-\
-\
-h
-'
--
-04
-'
-\
-(
-bu
-\
-h
-'
-+
-03
-'
-\
-c
-.
-\
-}
-.
-el
-\
-{
-\
-.
-sp
--
-1
-.
-IP
-\
-(
-bu
-2
-.
-3
-.
-\
-}
-CAMELLIA
-\
--
-256
-\
--
-CBC
-.
-RE
-.
-RE
-.
-PP
-PKCS
-#
-12
-PBE
-ciphers
-.
-RS
-4
-.
-sp
-.
-RS
-4
-.
-ie
-n
-\
-{
-\
-\
-h
-'
--
-04
-'
-\
-(
-bu
-\
-h
-'
-+
-03
-'
-\
-c
-.
-\
-}
-.
-el
-\
-{
-\
-.
-sp
--
-1
-.
-IP
-\
-(
-bu
-2
-.
-3
-.
-\
-}
-PKCS
-#
-12
-PBE
-with
-Sha1
-and
-128
-Bit
-RC4
-.
-RE
-.
-sp
-.
-RS
-4
-.
-ie
-n
-\
-{
-\
-\
-h
-'
--
-04
-'
-\
-(
-bu
-\
-h
-'
-+
-03
-'
-\
-c
-.
-\
-}
-.
-el
-\
-{
-\
-.
-sp
--
-1
-.
-IP
-\
-(
-bu
-2
-.
-3
-.
-\
-}
-PKCS
-#
-12
-PBE
-with
-Sha1
 and
 40
-Bit
+\
+-
+bit
 RC4
-.
-RE
-.
-sp
-.
-RS
-4
-.
-ie
-n
-\
-{
-\
-\
-h
-'
--
-04
-'
-\
 (
-bu
 \
-h
-'
-+
-03
-'
-\
-c
-.
-\
-}
-.
-el
-\
-{
-\
-.
-sp
--
-1
-.
-IP
-\
-(
-bu
-2
-.
-3
-.
-\
-}
+fB
+"
 PKCS
 #
 12
-PBE
-with
-Sha1
-and
-Triple
-DES
-CBC
-.
-RE
-.
-sp
-.
-RS
-4
-.
-ie
-n
-\
-{
-\
-\
-h
-'
--
-04
-'
-\
-(
-bu
-\
-h
-'
-+
-03
-'
-\
-c
-.
-\
-}
-.
-el
-\
-{
-\
-.
-sp
--
-1
-.
-IP
-\
-(
-bu
-2
-.
-3
-.
-\
-}
-PKCS
-#
-12
-PBE
-with
-Sha1
-and
-128
-Bit
-RC2
-CBC
-.
-RE
-.
-sp
-.
-RS
-4
-.
-ie
-n
-\
-{
-\
-\
-h
-'
--
-04
-'
-\
-(
-bu
-\
-h
-'
-+
-03
-'
-\
-c
-.
-\
-}
-.
-el
-\
-{
-\
-.
-sp
--
-1
-.
-IP
-\
-(
-bu
-2
-.
-3
-.
-\
-}
-PKCS
-#
-12
-PBE
-with
-Sha1
-and
-40
-Bit
-RC2
-CBC
-.
-RE
-.
-sp
-.
-RS
-4
-.
-ie
-n
-\
-{
-\
-\
-h
-'
--
-04
-'
-\
-(
-bu
-\
-h
-'
-+
-03
-'
-\
-c
-.
-\
-}
-.
-el
-\
-{
-\
-.
-sp
--
-1
-.
-IP
-\
-(
-bu
-2
-.
-3
-.
-\
-}
-PKCS12
 V2
 PBE
-with
-SHA1
-and
-128
-Bit
-RC4
-.
-RE
-.
-sp
-.
-RS
-4
-.
-ie
-n
+With
+SHA
 \
-{
-\
-\
-h
-'
--
-04
-'
-\
-(
-bu
-\
-h
-'
-+
-03
-'
-\
-c
-.
-\
-}
-.
-el
-\
-{
-\
-.
-sp
 -
 1
-.
-IP
-\
-(
-bu
-2
-.
-3
-.
-\
-}
-PKCS12
-V2
-PBE
-with
-SHA1
-and
+And
 40
 Bit
 RC4
+"
+\
+fR
+)
 (
-the
+used
+by
 default
 for
+certificate
+encryption
+in
 non
 \
 -
@@ -5576,83 +4848,58 @@ bu
 .
 \
 }
-PKCS12
+SHA
+\
+-
+1
+and
+3
+\
+-
+key
+triple
+\
+-
+DES
+(
+\
+fB
+"
+PKCS
+#
+12
 V2
 PBE
-with
-SHA1
-and
+With
+SHA
+\
+-
+1
+And
 3KEY
 Triple
 DES
 \
 -
-cbc
-.
-RE
-.
-sp
-.
-RS
-4
-.
-ie
-n
+CBC
+"
 \
-{
+fR
+or
 \
-\
-h
-'
--
-04
-'
-\
-(
-bu
-\
-h
-'
-+
-03
-'
-\
-c
-.
-\
-}
-.
-el
-\
-{
-\
-.
-sp
--
-1
-.
-IP
-\
-(
-bu
-2
-.
-3
-.
-\
-}
-PKCS12
-V2
-PBE
-with
-SHA1
-and
-2KEY
-Triple
+fB
+"
 DES
 \
 -
-cbc
+EDE3
+\
+-
+CBC
+"
+\
+fR
+)
 .
 RE
 .
@@ -5706,16 +4953,50 @@ bu
 .
 \
 }
-PKCS12
+SHA
+\
+-
+1
+and
+128
+\
+-
+bit
+RC2
+(
+\
+fB
+"
+PKCS
+#
+12
 V2
 PBE
-with
-SHA1
-and
+With
+SHA
+\
+-
+1
+And
 128
 Bit
 RC2
 CBC
+"
+\
+fR
+or
+\
+fB
+"
+RC2
+\
+-
+CBC
+"
+\
+fR
+)
 .
 RE
 .
@@ -5769,220 +5050,39 @@ bu
 .
 \
 }
-PKCS12
+SHA
+\
+-
+1
+and
+40
+\
+-
+bit
+RC2
+(
+\
+fB
+"
+PKCS
+#
+12
 V2
 PBE
-with
-SHA1
-and
+With
+SHA
+\
+-
+1
+And
 40
 Bit
 RC2
 CBC
-.
-RE
-.
-RE
-.
-PP
-PKCS
-#
-5
-PBE
-ciphers
-.
-RS
-4
-.
-sp
-.
-RS
-4
-.
-ie
-n
+"
 \
-{
-\
-\
-h
-'
--
-04
-'
-\
-(
-bu
-\
-h
-'
-+
-03
-'
-\
-c
-.
-\
-}
-.
-el
-\
-{
-\
-.
-sp
--
-1
-.
-IP
-\
-(
-bu
-2
-.
-3
-.
-\
-}
-PKCS
-#
-5
-Password
-Based
-Encryption
-with
-MD2
-and
-DES
-CBC
-.
-RE
-.
-sp
-.
-RS
-4
-.
-ie
-n
-\
-{
-\
-\
-h
-'
--
-04
-'
-\
-(
-bu
-\
-h
-'
-+
-03
-'
-\
-c
-.
-\
-}
-.
-el
-\
-{
-\
-.
-sp
--
-1
-.
-IP
-\
-(
-bu
-2
-.
-3
-.
-\
-}
-PKCS
-#
-5
-Password
-Based
-Encryption
-with
-MD5
-and
-DES
-CBC
-.
-RE
-.
-sp
-.
-RS
-4
-.
-ie
-n
-\
-{
-\
-\
-h
-'
--
-04
-'
-\
-(
-bu
-\
-h
-'
-+
-03
-'
-\
-c
-.
-\
-}
-.
-el
-\
-{
-\
-.
-sp
--
-1
-.
-IP
-\
-(
-bu
-2
-.
-3
-.
-\
-}
-PKCS
-#
-5
-Password
-Based
-Encryption
-with
-SHA1
-and
-DES
-CBC
+fR
+)
 .
 RE
 .
@@ -7029,6 +6129,209 @@ org
 NSS_Shared_DB
 .
 RE
+.
+SH
+"
+COMPATIBILITY
+NOTES
+"
+.
+PP
+The
+exporting
+behavior
+of
+\
+fBpk12util
+\
+fR
+has
+changed
+over
+time
+while
+importing
+files
+exported
+with
+older
+versions
+of
+NSS
+is
+still
+supported
+\
+&
+.
+.
+PP
+Until
+the
+3
+\
+&
+.
+30
+release
+\
+fBpk12util
+\
+fR
+used
+the
+UTF
+\
+-
+16
+encoding
+for
+the
+PKCS
+#
+5
+password
+\
+-
+based
+encryption
+schemes
+while
+the
+recommendation
+is
+to
+encode
+passwords
+in
+UTF
+\
+-
+8
+if
+the
+used
+encryption
+scheme
+is
+defined
+outside
+of
+the
+PKCS
+#
+12
+standard
+\
+&
+.
+.
+PP
+Until
+the
+3
+\
+&
+.
+31
+release
+even
+when
+\
+fB
+"
+AES
+\
+-
+128
+\
+-
+CBC
+"
+\
+fR
+or
+\
+fB
+"
+AES
+\
+-
+192
+\
+-
+CBC
+"
+\
+fR
+is
+given
+from
+the
+command
+line
+\
+fBpk12util
+\
+fR
+always
+used
+256
+\
+-
+bit
+AES
+as
+the
+underlying
+encryption
+scheme
+\
+&
+.
+.
+PP
+For
+historical
+reasons
+\
+fBpk12util
+\
+fR
+accepts
+password
+\
+-
+based
+encryption
+schemes
+not
+listed
+in
+this
+document
+\
+&
+.
+However
+those
+schemes
+are
+not
+officially
+supported
+and
+may
+have
+issues
+in
+interoperability
+with
+other
+tools
+\
+&
+.
 .
 SH
 "
