Bug 1413464 - [oc] Search engine setup for Firefox for Occitan r=delphine
I've also renamed wikipediaro.xml to wikipedia-ro.xml, since it's the only file without an hyphen.

MozReview-Commit-ID: BXh2t5NzrSt

UltraBlame original commit: e982afd4f073a55188f4351cd2cfc9bab1f36bf2

--- a/browser/locales/search/list.json
+++ b/browser/locales/search/list.json
@@ -3736,6 +3736,51 @@ NN
 }
 }
 "
+oc
+"
+:
+{
+"
+default
+"
+:
+{
+"
+visibleDefaultEngines
+"
+:
+[
+"
+google
+"
+"
+yahoo
+-
+france
+"
+"
+bing
+"
+"
+ddg
+"
+"
+twitter
+"
+"
+wikipedia
+-
+oc
+"
+"
+wiktionary
+-
+oc
+"
+]
+}
+}
+"
 or
 "
 :
@@ -4031,7 +4076,9 @@ amazondotcom
 ddg
 "
 "
-wikipediaro
+wikipedia
+-
+ro
 "
 ]
 }
