no bug - Import translations from android-l10n r=release a=l10n CLOSED TREE
UltraBlame original commit: 517dba869c447e19ef612e2f48f46d5b675fcf06

--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-an/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-an/strings.xml
@@ -1519,34 +1519,6 @@ string
 -
 -
 The
-authors
-of
-an
-add
--
-on
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_addons_authors
-"
->
-Autors
-<
-/
-string
->
-<
-!
--
--
-The
 last
 date
 that
@@ -1741,34 +1713,6 @@ add
 -
 on
 is
-disabled
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_addons_settings_off
-"
->
-Desactivau
-<
-/
-string
->
-<
-!
--
--
-Indicates
-the
-add
--
-on
-is
 allowed
 in
 private
@@ -1855,34 +1799,6 @@ mozac_feature_addons_enabled
 "
 >
 Activau
-<
-/
-string
->
-<
-!
--
--
-Indicates
-the
-add
--
-on
-is
-disabled
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_addons_disabled
-"
->
-Desactivau
 <
 /
 string
@@ -2218,16 +2134,21 @@ string
 -
 This
 is
+a
 button
-that
+to
 remove
 (
+i
+.
+e
+.
 uninstall
+)
 an
 add
 -
 on
-)
 .
 -
 -
@@ -2442,37 +2363,6 @@ string
 !
 -
 -
-Accessibility
-content
-description
-to
-install
-add
--
-on
-button
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_addons_install_addon_content_description
-"
->
-Instalar
-complemento
-<
-/
-string
->
-<
-!
--
--
 This
 is
 the
@@ -2554,83 +2444,6 @@ string
 !
 -
 -
-Accessibility
-content
-description
-for
-the
-amount
-of
-stars
-that
-add
--
-on
-has
-where
-%
-1
-.
-02f
-will
-be
-the
-amount
-of
-stars
-and
-/
-separator
-and
-5
-the
-maximum
-number
-of
-stars
-e
-.
-g
-(
-2
-/
-5
-4
-.
-5
-/
-5
-or
-5
-/
-5
-)
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_addons_rating_content_description
-"
->
-%
-1
-.
-02f
-/
-5
-<
-/
-string
->
-<
-!
--
--
 This
 is
 the
@@ -2657,6 +2470,41 @@ mozac_feature_addons_addons
 "
 >
 Complementos
+<
+/
+string
+>
+<
+!
+-
+-
+Label
+for
+add
+-
+ons
+sub
+menu
+item
+for
+add
+-
+ons
+manager
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_addons_manager
+"
+>
+Chestor
+de
+complementos
 <
 /
 string
@@ -2965,65 +2813,6 @@ displaying
 a
 notification
 for
-updating
-an
-add
--
-on
-.
-See
-https
-:
-/
-/
-developer
-.
-android
-.
-com
-/
-training
-/
-notify
--
-user
-/
-channels
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_addons_updater_notification_channel
-"
->
-Actualizacions
-de
-complementos
-<
-/
-string
->
-<
-!
--
--
-Name
-of
-the
-"
-notification
-channel
-"
-used
-for
-displaying
-a
-notification
-for
 new
 supported
 add
@@ -3057,6 +2846,13 @@ name
 =
 "
 mozac_feature_addons_supported_checker_notification_channel
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 Comprobador
@@ -3103,6 +2899,13 @@ name
 "
 mozac_feature_addons_supported_checker_notification_title
 "
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Nuevo
 complemento
@@ -3148,6 +2951,13 @@ name
 =
 "
 mozac_feature_addons_supported_checker_notification_title_plural
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 Nuevos
@@ -3405,61 +3215,6 @@ string
 name
 =
 "
-mozac_feature_addons_not_yet_supported_caption
-"
->
-La
-tecnoloch
-a
-d
-os
-complementos
-de
-Firefox
-se
-ye
-modernizando
-.
-Estes
-complementos
-usan
-frameworks
-que
-no
-son
-compatibles
-con
-Firefox
-75
-y
-posteriors
-.
-<
-/
-string
->
-<
-!
--
--
-This
-is
-the
-caption
-for
-not
-yet
-supported
-screen
-caption
--
--
->
-<
-string
-name
-=
-"
 mozac_feature_addons_not_yet_supported_caption2
 "
 >
@@ -3487,60 +3242,43 @@ string
 !
 -
 -
-This
-is
-the
-caption
-for
-the
-add
--
-on
-installation
-progress
-overlay
--
--
->
-<
-string
-name
-=
-"
-mozac_add_on_install_progress_caption
-"
->
-Descargando
-y
-verificando
-lo
-complemento
-<
-/
-string
->
-<
-!
--
--
 Error
 shown
 when
-something
-unexpected
-happened
-while
-trying
+unable
 to
-get
+find
+a
+translation
+for
+an
+add
+-
+on
+field
+.
+%
+1
+s
+is
+the
+locale
+of
+the
+user
+and
+%
+2
+s
+is
+the
+default
+language
+of
 the
 add
 -
 on
-list
-from
-the
-server
 -
 -
 >
@@ -3549,14 +3287,25 @@ string
 name
 =
 "
-mozac_feature_addons_failed_to_query_add_ons
+mozac_feature_addons_failed_to_translate
 "
 >
-Error
-en
-solicitar
-complementos
-!
+Traducci
+n
+no
+trobada
+pa
+puesto
+%
+1
+s
+deng
+n
+idioma
+predeterminau
+%
+2
+s
 <
 /
 string
@@ -4104,89 +3853,6 @@ string
 -
 -
 Text
-shown
-in
-not
-yet
-supported
-add
--
-ons
-section
-in
-AddonsManagerAdapter
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_addons_unsupported_caption
-"
->
-1
-complemento
-<
-/
-string
->
-<
-!
--
--
-Text
-shown
-in
-not
-yet
-supported
-add
--
-ons
-section
-in
-AddonsManagerAdapter
--
-plural
-.
-%
-1
-s
-is
-the
-number
-of
-unsupported
-add
--
-ons
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_addons_unsupported_caption_plural
-"
->
-%
-1
-s
-complementos
-<
-/
-string
->
-<
-!
--
--
-Text
 link
 to
 a
@@ -4544,89 +4210,6 @@ a
 %
 2
 s
-<
-/
-string
->
-<
-!
--
--
-Text
-shown
-in
-the
-dialog
-when
-add
--
-on
-installation
-is
-completed
-.
-%
-1
-s
-is
-the
-add
--
-on
-name
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_addons_installed_dialog_description
-"
->
-Ubrir
--
-lo
-en
-o
-men
-<
-/
-string
->
-<
-!
--
--
-Confirmation
-button
-text
-for
-the
-dialog
-when
-add
--
-on
-installation
-is
-completed
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_addons_installed_dialog_okay_button
-"
->
-Vale
-entendiu
 <
 /
 string
