--- a/mobile/android/android-components/components/feature/prompts/src/main/res/values-an/strings.xml
+++ b/mobile/android/android-components/components/feature/prompts/src/main/res/values-an/strings.xml
@@ -348,6 +348,20 @@ name
 "
 mozac_feature_prompt_dont_save
 "
+moz
+:
+removedIn
+=
+"
+125
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 No
 alzar
@@ -448,6 +462,20 @@ name
 "
 mozac_feature_prompt_dont_update
 "
+moz
+:
+removedIn
+=
+"
+125
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 No
 actualizar
@@ -514,6 +542,20 @@ name
 "
 mozac_feature_prompt_error_empty_password
 "
+moz
+:
+removedIn
+=
+"
+125
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Lo
 campo
@@ -535,7 +577,7 @@ text
 displayed
 underneath
 the
-password
+login
 field
 when
 it
@@ -553,6 +595,20 @@ name
 =
 "
 mozac_feature_prompt_error_unknown_cause
+"
+moz
+:
+removedIn
+=
+"
+125
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 No
@@ -608,6 +664,20 @@ name
 "
 mozac_feature_prompt_login_save_headline
 "
+moz
+:
+removedIn
+=
+"
+125
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Alzar
 este
@@ -660,6 +730,20 @@ name
 =
 "
 mozac_feature_prompt_login_update_headline
+"
+moz
+:
+removedIn
+=
+"
+125
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 Actualizar
@@ -715,6 +799,20 @@ name
 =
 "
 mozac_feature_prompt_login_add_username_headline
+"
+moz
+:
+removedIn
+=
+"
+130
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 Anyadir
@@ -1604,6 +1702,20 @@ name
 "
 mozac_feature_prompts_manage_logins
 "
+moz
+:
+removedIn
+=
+"
+125
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Chestiona
 os
@@ -1641,6 +1753,20 @@ name
 =
 "
 mozac_feature_prompts_expand_logins_content_description
+"
+moz
+:
+removedIn
+=
+"
+125
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 Expande
@@ -1680,6 +1806,20 @@ name
 =
 "
 mozac_feature_prompts_collapse_logins_content_description
+"
+moz
+:
+removedIn
+=
+"
+125
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 Reduce
@@ -1724,12 +1864,397 @@ name
 "
 mozac_feature_prompts_saved_logins
 "
+moz
+:
+removedIn
+=
+"
+125
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Inicios
 de
 sesi
 n
 sucherius
+<
+/
+string
+>
+<
+!
+-
+-
+Strings
+shown
+in
+a
+dialog
+that
+appear
+when
+users
+try
+to
+refresh
+a
+certain
+kind
+of
+webpages
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompt_repost_title
+"
+>
+Tornar
+a
+ninviar
+datos
+a
+esta
+pachina
+?
+<
+/
+string
+>
+<
+string
+name
+=
+"
+mozac_feature_prompt_repost_message
+"
+>
+Actualizar
+ista
+pachina
+podr
+a
+duplicar
+accions
+recients
+per
+eixemplo
+ninviar
+un
+pagamento
+u
+publicar
+un
+comentario
+duplicado
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Pressing
+this
+will
+dismiss
+the
+dialog
+and
+reload
+the
+page
+sending
+again
+the
+previous
+data
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompt_repost_positive_button_text
+"
+>
+Reninviar
+datos
+<
+/
+string
+>
+<
+!
+-
+-
+Pressing
+this
+will
+dismiss
+the
+dialog
+and
+not
+refresh
+the
+webpage
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompt_repost_negative_button_text
+"
+>
+Cancelar
+<
+/
+string
+>
+<
+!
+-
+-
+Credit
+Card
+Autofill
+-
+-
+>
+<
+!
+-
+-
+Header
+for
+the
+select
+credit
+card
+prompt
+to
+allow
+users
+to
+fill
+a
+form
+with
+a
+saved
+credit
+card
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_select_credit_card
+"
+moz
+:
+removedIn
+=
+"
+125
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Seleccionar
+tarcheta
+de
+credito
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+expanding
+the
+select
+credit
+card
+options
+in
+the
+select
+credit
+card
+prompt
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_expand_credit_cards_content_description
+"
+moz
+:
+removedIn
+=
+"
+125
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Expande
+las
+tarchetas
+de
+credito
+sucheridas
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+collapsing
+the
+select
+credit
+card
+options
+in
+the
+select
+credit
+prompt
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_collapse_credit_cards_content_description
+"
+moz
+:
+removedIn
+=
+"
+125
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Reduce
+las
+tarchetas
+de
+credito
+sucheridas
+<
+/
+string
+>
+<
+!
+-
+-
+Option
+in
+the
+expanded
+select
+credit
+card
+prompt
+that
+links
+to
+credit
+cards
+settings
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_manage_credit_cards
+"
+moz
+:
+removedIn
+=
+"
+125
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Chestiona
+las
+tarchetas
+de
+credito
 <
 /
 string
