--- a/mobile/android/fenix/app/src/main/res/values-gn/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-gn/strings.xml
@@ -1614,6 +1614,20 @@ name
 "
 tcp_cfr_message
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Ore
 rembiapo
@@ -1663,6 +1677,20 @@ name
 =
 "
 tcp_cfr_learn_more
+"
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 Maranduve
@@ -1971,6 +1999,20 @@ name
 =
 "
 tablet_nav_bar_cfr_title
+"
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 Pyahu
@@ -3280,6 +3322,122 @@ E
 angareko
 jepysoku
 re
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+Label
+for
+plus
+icon
+used
+to
+add
+extension
+.
+The
+first
+parameter
+is
+the
+name
+of
+the
+extension
+(
+for
+example
+:
+ClearURLs
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_extension_plus_icon_content_description_2
+"
+>
+Embojuaju
+%
+1
+s
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+Label
+for
+plus
+icon
+used
+to
+add
+extensions
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_extension_plus_icon_content_description
+"
+moz
+:
+removedIn
+=
+"
+124
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Embojuaju
+jepysokue
 <
 /
 string
@@ -4802,9 +4960,9 @@ etc
 Back
 button
 for
-the
-page
-tools
+all
+menu
+redesign
 sub
 -
 menu
@@ -6396,6 +6554,13 @@ name
 =
 "
 onboarding_home_screen_jump_back_contextual_hint_2
+"
+moz
+:
+removedIn
+=
+"
+132
 "
 >
 Ehecha
@@ -19489,6 +19654,66 @@ string
 !
 -
 -
+Unsubmitted
+crash
+dialog
+negative
+button
+to
+dismiss
+the
+dialog
+-
+-
+>
+<
+string
+name
+=
+"
+unsubmitted_crash_dialog_negative_button
+"
+>
+Mboty
+<
+/
+string
+>
+<
+!
+-
+-
+Unsubmitted
+crash
+dialog
+positive
+button
+to
+submit
+crash
+report
+-
+-
+>
+<
+string
+name
+=
+"
+unsubmitted_crash_dialog_positive_button
+"
+>
+Emondo
+marandu
+javygua
+<
+/
+string
+>
+<
+!
+-
+-
 Bookmarks
 -
 -
@@ -20669,6 +20894,20 @@ name
 "
 bookmark_close_button_content_description
 "
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+moz
+:
+removedIn
+=
+"
+130
+"
 >
 Emboty
 techaukaha
@@ -20747,6 +20986,38 @@ tem
 s
 peg
 uar
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+for
+the
+button
+to
+navigate
+to
+sync
+authentication
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_empty_list_guest_cta
+"
+>
+Eike
+embojuehe
+hag
+ua
 <
 /
 string
@@ -41788,6 +42059,20 @@ name
 "
 review_quality_check_first_cfr_message
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Ehecha
 ejerovi
@@ -41839,6 +42124,13 @@ name
 "
 review_quality_check_first_cfr_action
 "
+moz
+:
+removedIn
+=
+"
+132
+"
 tools
 :
 ignore
@@ -41879,6 +42171,20 @@ name
 =
 "
 review_quality_check_second_cfr_message
+"
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 Ejerovi
@@ -41935,6 +42241,13 @@ name
 =
 "
 review_quality_check_second_cfr_action
+"
+moz
+:
+removedIn
+=
+"
+132
 "
 tools
 :
@@ -49103,6 +49416,39 @@ Ndaipor
 i
 jehekaha
 Firefox
+<
+/
+string
+>
+<
+!
+-
+-
+Option
+for
+likert
+scale
+-
+-
+>
+<
+string
+name
+=
+"
+likert_scale_option_8
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Ndaipor
+i
+embojuehe
 <
 /
 string
