--- a/mobile/android/fenix/app/src/main/res/values-tr/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-tr/strings.xml
@@ -21865,6 +21865,102 @@ string
 !
 -
 -
+Description
+for
+the
+bookmark
+list
+empty
+state
+when
+you
+'
+re
+signed
+into
+sync
+.
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_empty_list_authenticated_description
+"
+>
+Gezinirken
+siteleri
+kaydedin
+.
+E
+itlenen
+di
+er
+cihazlardaki
+yer
+imleriniz
+de
+buraya
+eklenecek
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Description
+for
+the
+bookmark
+list
+empty
+state
+when
+you
+'
+re
+in
+an
+empty
+folder
+.
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_empty_list_folder_description
+"
+>
+Gezinirken
+sevdi
+iniz
+siteleri
+yer
+imlerinize
+ekleyerek
+onlar
+daha
+sonra
+bulabilirsiniz
+.
+<
+/
+string
+>
+<
+!
+-
+-
 Site
 Permissions
 -
@@ -51432,6 +51528,48 @@ leri
 s
 f
 rla
+<
+/
+string
+>
+<
+!
+-
+-
+Glean
+debug
+tools
+-
+-
+>
+<
+!
+-
+-
+The
+title
+of
+the
+glean
+debugging
+feature
+-
+-
+>
+<
+string
+name
+=
+"
+glean_debug_tools_title
+"
+>
+Glean
+Hata
+Ay
+klama
+Ara
+lar
 <
 /
 string
