--- a/mobile/android/android-components/components/browser/errorpages/src/main/res/values-an/strings.xml
+++ b/mobile/android/android-components/components/browser/errorpages/src/main/res/values-an/strings.xml
@@ -4398,6 +4398,106 @@ p
 string
 >
 <
+!
+-
+-
+The
+title
+of
+the
+error
+page
+for
+websites
+that
+do
+not
+support
+HTTPS
+when
+HTTPS
+-
+Only
+is
+turned
+on
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_httpsonly_title
+"
+>
+Puesto
+seguro
+no
+disponible
+<
+/
+string
+>
+<
+!
+-
+-
+Button
+on
+error
+page
+for
+websites
+that
+do
+not
+support
+HTTPS
+when
+HTTPS
+-
+Only
+is
+turned
+on
+.
+Clicking
+the
+button
+allows
+the
+user
+to
+nevertheless
+load
+the
+website
+using
+HTTP
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_httpsonly_button
+"
+>
+Continar
+ta
+puesto
+web
+HTTP
+<
+/
+string
+>
+<
 /
 resources
 >
