--- a/mobile/android/android-components/components/browser/toolbar/src/main/res/values-an/strings.xml
+++ b/mobile/android/android-components/components/browser/toolbar/src/main/res/values-an/strings.xml
@@ -64,6 +64,23 @@ Men
 string
 >
 <
+!
+-
+-
+Content
+description
+:
+For
+the
+clear
+URL
+text
+button
+.
+-
+-
+>
+<
 string
 name
 =
@@ -310,6 +327,58 @@ mozac_browser_toolbar_progress_loading
 Se
 ye
 cargando
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+:
+For
+the
+autoplay
+toolbar
+icon
+it
+is
+set
+when
+the
+auto
+play
+permission
+is
+blocking
+content
+playing
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_toolbar_content_description_autoplay_blocked
+"
+>
+Bel
+conteniu
+ha
+estau
+blocau
+per
+l
+achuste
+de
+reproducci
+n
+automatica
 <
 /
 string
