--- a/mobile/android/android-components/components/feature/downloads/src/main/res/values-an/strings.xml
+++ b/mobile/android/android-components/components/feature/downloads/src/main/res/values-an/strings.xml
@@ -714,6 +714,188 @@ s
 string
 >
 <
+!
+-
+-
+Alert
+dialog
+confirmation
+before
+cancelling
+downloads
+this
+is
+the
+title
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_downloads_cancel_active_downloads_warning_content_title
+"
+>
+Cancelar
+descargas
+privadas
+?
+<
+/
+string
+>
+<
+!
+-
+-
+Alert
+dialog
+confirmation
+before
+cancelling
+private
+downloads
+this
+is
+the
+body
+.
+%
+1
+s
+will
+be
+replaced
+with
+the
+name
+of
+the
+file
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_downloads_cancel_active_private_downloads_warning_content_body
+"
+>
+Si
+tancas
+agora
+todas
+as
+finestras
+de
+navegaci
+n
+privada
+la
+descarga
+%
+1
+s
+se
+cancelar
+.
+Yes
+seguro
+que
+quiers
+salir
+d
+o
+modo
+de
+navegaci
+n
+privada
+?
+<
+/
+string
+>
+<
+!
+-
+-
+Alert
+dialog
+confirmation
+before
+cancelling
+downloads
+this
+is
+the
+positive
+action
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_downloads_cancel_active_downloads_accept
+"
+>
+Cancelar
+descargas
+<
+/
+string
+>
+<
+!
+-
+-
+Alert
+dialog
+confirmation
+before
+cancelling
+downloads
+this
+is
+the
+negative
+action
+.
+Leaves
+user
+in
+Private
+browsing
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_downloads_cancel_active_private_downloads_deny
+"
+>
+Seguir
+en
+navegaci
+n
+privada
+<
+/
+string
+>
+<
 /
 resources
 >
