--- a/mobile/android/fenix/app/src/main/res/values-bg/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-bg/strings.xml
@@ -6929,6 +6929,53 @@ string
 name
 =
 "
+juno_onboarding_default_browser_description_nimbus_5
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+?
+.
+?
+700
+.
+PDF
+?
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Description
+for
+set
+firefox
+as
+default
+browser
+screen
+used
+by
+Nimbus
+experiments
+.
+-
+-
+>
+<
+string
+name
+=
+"
 juno_onboarding_default_browser_description_nimbus_2
 "
 moz
