--- a/mobile/android/focus-android/app/src/main/res/values-bg/strings.xml
+++ b/mobile/android/focus-android/app/src/main/res/values-bg/strings.xml
@@ -1741,6 +1741,13 @@ name
 "
 text_selection_search_action_focus
 "
+tools
+:
+ignore
+=
+"
+BrandUsage
+"
 >
 Focus
 <
@@ -1803,6 +1810,13 @@ name
 =
 "
 text_selection_search_action_klar
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
 "
 >
 Klar
@@ -1868,6 +1882,13 @@ name
 =
 "
 text_selection_search_action_focus_beta
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
 "
 >
 Focus
@@ -1935,6 +1956,13 @@ name
 "
 text_selection_search_action_focus_nightly
 "
+tools
+:
+ignore
+=
+"
+BrandUsage
+"
 >
 Focus
 Nightly
@@ -1988,6 +2016,13 @@ name
 =
 "
 about_content
+"
+tools
+:
+ignore
+=
+"
+IncorrectStraightDoubleQuote
 "
 >
 <
@@ -7471,6 +7506,46 @@ string
 !
 -
 -
+Label
+for
+the
+option
+in
+the
+Focus
+"
+tabs
+tray
+"
+to
+clos
+the
+other
+tabs
+except
+the
+current
+tab
+.
+-
+-
+>
+<
+string
+name
+=
+"
+tabs_tray_action_erase_other
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
 If
 the
 user
@@ -7529,6 +7604,13 @@ name
 =
 "
 download_firefox
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
 "
 >
 Firefox
@@ -7677,6 +7759,13 @@ name
 "
 your_rights_content2
 "
+tools
+:
+ignore
+=
+"
+IncorrectStraightDoubleQuote
+"
 >
 <
 !
@@ -7791,6 +7880,14 @@ name
 "
 your_rights_content3
 "
+tools
+:
+ignore
+=
+"
+BrandUsage
+IncorrectStraightDoubleQuote
+"
 >
 <
 !
@@ -7890,6 +7987,13 @@ name
 =
 "
 your_rights_content4
+"
+tools
+:
+ignore
+=
+"
+IncorrectStraightDoubleQuote
 "
 >
 <
@@ -8015,6 +8119,13 @@ name
 =
 "
 your_rights_content5
+"
+tools
+:
+ignore
+=
+"
+IncorrectStraightDoubleQuote
 "
 >
 <
@@ -10467,6 +10578,13 @@ name
 "
 preference_studies_summary
 "
+tools
+:
+ignore
+=
+"
+BrandUsage
+"
 >
 Firefox
 .
@@ -11574,6 +11692,20 @@ name
 =
 "
 full_screen_notification
+"
+moz
+:
+removedIn
+=
+"
+130
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 <
@@ -12886,6 +13018,13 @@ name
 "
 errorpage_httpsonly_message2
 "
+tools
+:
+ignore
+=
+"
+IncorrectStraightDoubleQuote
+"
 >
 <
 !
@@ -13725,6 +13864,224 @@ name
 =
 "
 promote_search_widget_snackbar_message
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Messages
+explaining
+how
+to
+exit
+fullscreen
+mode
+-
+-
+>
+<
+!
+-
+-
+Message
+shown
+to
+explain
+how
+to
+exit
+fullscreen
+mode
+when
+gesture
+navigation
+is
+enabled
+-
+-
+>
+<
+string
+name
+=
+"
+exit_fullscreen_with_gesture
+"
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Message
+shown
+to
+explain
+how
+to
+exit
+fullscreen
+mode
+when
+using
+back
+button
+navigation
+-
+-
+>
+<
+string
+name
+=
+"
+exit_fullscreen_with_back_button
+"
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Message
+shown
+to
+explain
+how
+to
+exit
+fullscreen
+mode
+when
+gesture
+navigation
+is
+enabled
+.
+-
+-
+>
+<
+!
+-
+-
+Localisation
+note
+:
+this
+text
+should
+be
+as
+short
+as
+possible
+max
+68
+chars
+-
+-
+>
+<
+string
+name
+=
+"
+exit_fullscreen_with_gesture_short
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Message
+shown
+to
+explain
+how
+to
+exit
+fullscreen
+mode
+when
+using
+back
+button
+navigation
+.
+-
+-
+>
+<
+!
+-
+-
+Localisation
+note
+:
+this
+text
+should
+be
+as
+short
+as
+possible
+max
+68
+chars
+-
+-
+>
+<
+string
+name
+=
+"
+exit_fullscreen_with_back_button_short
 "
 >
 <
