Bug 1921337 [wpt PR 48352] - Web platform tests for Fledge Deal support., a=testonly
Automatic update from web-platform-tests
Web platform tests for Fledge Deal support.

This tests that all of the following receive the expected
reporting ids in every major scenario possible involving the
`selectableBuyerAndSellerReportingIds`.

These do not test anything with k-anon enforcement on, but
a TODO was added for that.

Bug: 356654297
Change-Id: Iaec6d54141abb33b0a43382736dc5d197d66f60e
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5868409
Reviewed-by: Orr Bernstein <orrbgoogle.com>
Commit-Queue: Youssef Bourouphael <ybourouphaelgoogle.com>
Reviewed-by: Daniel Cheng <dchengchromium.org>
Cr-Commit-Position: refs/heads/main{#1360755}

--

wpt-commits: 8d500adf7d6937060f1195e63ea02f17700be14b
wpt-pr: 48352

UltraBlame original commit: b863b8d5e4fc08c03905d2ff9138b57486235a1b

--- a/testing/web-platform/tests/fledge/tentative/TODO
+++ b/testing/web-platform/tests/fledge/tentative/TODO
@@ -987,3 +987,17 @@ scoring
 signals
 coordinators
 .
+*
+Test
+selectable
+buyer
+and
+seller
+reporting
+ids
+with
+k
+-
+anonymity
+enforcement
+.
